--- a/k8s/redis-app-deployment.yaml
+++ b/k8s/redis-app-deployment.yaml
@@ -19,6 +19,76 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: redis
+  namespace: redis-app
+  labels:
+    app: redis
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: redis
+  template:
+    metadata:
+      labels:
+        app: redis
+    spec:
+      containers:
+        - name: redis
+          image: redis:7-alpine
+          ports:
+            - containerPort: 6379
+              name: redis
+          args:
+            - redis-server
+            - --appendonly
+            - 'yes'
+          resources:
+            requests:
+              memory: '64Mi'
+              cpu: '50m'
+            limits:
+              memory: '128Mi'
+              cpu: '100m'
+          volumeMounts:
+            - name: redis-data
+              mountPath: /data
+          livenessProbe:
+            tcpSocket:
+              port: 6379
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            exec:
+              command:
+                - redis-cli
+                - ping
+            initialDelaySeconds: 5
+            periodSeconds: 5
+      volumes:
+        - name: redis-data
+          emptyDir: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-service
+  namespace: redis-app
+  labels:
+    app: redis
+spec:
+  type: ClusterIP
+  ports:
+    - port: 6379
+      targetPort: 6379
+      protocol: TCP
+      name: redis
+  selector:
+    app: redis
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
   name: redis-app
   namespace: redis-app
   labels:
@@ -84,7 +154,7 @@ metadata:
   labels:
     app: redis-app
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 3001
@@ -92,26 +162,3 @@ spec:
       name: http
   selector:
     app: redis-app
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: redis-app-ingress
-  namespace: redis-app
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
-    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
-spec:
-  ingressClassName: nginx
-  rules:
-    - host: redis-app.local # Change this to your domain
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: redis-app-service
-                port:
-                  number: 80
