--- a/k8s/redis-deployment.yaml
+++ b/k8s/redis-deployment.yaml
@@ -9,7 +9,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: standard
+  storageClassName: managed-csi
 ---
 apiVersion: apps/v1
 kind: Deployment
